# yolo-sam2-lab-tracking

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: CLAUDE.md  contacts_postprocess_simple.yaml  hpc_centroid.yaml  hpc_extract.yaml  hpc_full.yaml  hpc_reference.yaml  hpc_sam2video.yaml  hpc_sam3.yaml  local_centroid.yaml  local_extract.yaml  local_quick.yaml  local_reference.yaml  local_sam2video.yaml  local_sam3.yaml
docs/: README.md  centroid_pipeline.md  contacts_postprocess_simple.md  evaluation.md  findings.md  labeling_guide.md  lessons_learned.md  overview.md  parameter_tuning.md  pipeline_architecture.md  pipeline_improvements.md  pipeline_tests.md  refactoring_plan.md  reference_comparison.md  running_hpc_bunya.md  running_local.md  slurm.md  tracking-techniques-analysis.md  yolo26-migration-plan.md
observ/: Problems.docx
outputs/: `  overlay.avi
reference/: 01_architecture.md  02_yolo_integration.md  03_sam2_integration.md  04_pipeline_guide.md  05_quick_reference.md  README.md
roboflow/: TRAINING_GUIDE.md  extract_interaction_frames.py  run_extract.sh  train_yolo_pose.py  train_yolo_pose.sbatch
scripts/: CLAUDE.md  analyze_contacts.py  check_gpu.py  debug_sam2_no_yolo.py  debug_sam2_only.py  debug_yolo_only.py  export_results.py  extract_clip.py  extract_frames.py  merge_chunks.py  postprocess_contacts_simple.py  run_debug_parallel.sh  run_parallel.sh  run_pipeline.sbatch  trim_video.py  upload_to_roboflow.py
slurm/: run_centroid.sbatch  run_chunks.sbatch  run_extract_frames.sbatch  (+4 more)
(+106 files in other folders)
